--- a/views/admin/listOrders.ejs
+++ b/views/admin/listOrders.ejs
@@ -103,9 +103,9 @@
                         </div>
                         <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
                             aria-orientation="vertical">
-                            <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill"
+                            <button class="nav-link active" id="dashboard data-bs-toggle="pill"
                                 data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home"
-                                aria-selected="true"><span><i class="fas fa-user"></i></span> Personal Info</button>
+                                aria-selected="true"><span><i class="fas fa-user"></i></span>Dashboard</button>
 
                            <button class="nav-link"  id="users-tab" data-bs-toggle="pill"
                                 data-bs-target="#v-pills-address" type="button" role="tab"
@@ -238,7 +238,9 @@
               .catch(error=>console.error(error))
             }
 
-
+            document.getElementById("dashboard-tab").addEventListener("click", (event) => {
+            window.location.href = "/admin/dashboard"
+        })
             document.getElementById("users-tab").addEventListener("click" , (event)=>{
         window.location.href = "/admin/usersList"
     })
