--- a/views/admin/productOffer.ejs
+++ b/views/admin/productOffer.ejs
@@ -18,6 +18,9 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+
+    <link rel="stylesheet" href="css/productPopup.css">
+    <link href="https://cdn.datatables.net/v/bs5/jq-3.6.0/dt-1.13.4/sp-2.1.2/datatables.min.css" rel="stylesheet"/>
     <!-- <link rel="stylesheet" href="css/rtl.css"> -->
 </head>
 
@@ -41,7 +44,7 @@
                         <li><a href="#"><i class="fab fa-facebook-f"></i></a> </li>
                         <li><a href="#"><i class="fab fa-twitter"></i></a> </li>
                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a> </li>
-                        
+                       
                     </ul>
                 </div>
             </div>
@@ -66,15 +69,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav m-auto">
-                    
-                    
-                   
-                    
+                       
                 </ul>
                 <ul class="menu_icon d-flex flex-wrap">
                     
                     <li>
-                        <a href=""><i class="fas fa-user"></i></a>
+                        <a href="/admin/dashboard" ><i class="fas fa-user"></i></a>
                     </li>
                     <li>
                         <a class="common_btn" href="/admin/logout" data-bs-toggle="modal"
@@ -86,12 +86,8 @@
     </nav>
 
 
-    
+  <br><br>
 
-
-   <!--=========================
-        DASHBOARD START
-    ==========================-->
     <section class="fp__dashboard mt_120 xs_mt_90 mb_100 xs_mb_70">
         <div class="container">
             <div class="fp__dashboard_area">
@@ -135,12 +131,17 @@
                                             <button class="nav-link" id="coupon-tab" data-bs-toggle="pill"
                                                       type="button" role="tab"
                                     aria-controls="v-pills-settings" aria-selected="false"><span><i
-                                            class="fas fa-user-lock"></i></span>Coupon</button>
+                                            class="fas fa-user-lock"></i></span>Coupons</button>
 
                                             <button class="nav-link" id="sales-tab" data-bs-toggle="pill"
                                                       type="button" role="tab"
                                     aria-controls="v-pills-settings" aria-selected="false"><span><i
                                             class="fas fa-user-lock"></i></span>Sales Report</button>
+
+                                            <button class="nav-link" id="productOffer-tab" data-bs-toggle="pill"
+                                                      type="button" role="tab"
+                                    aria-controls="v-pills-settings" aria-selected="false"><span><i
+                                            class="fas fa-user-lock"></i></span>Product Offers</button>
 
                                 <button class="nav-link" type="button"><span> <i class="fas fa-sign-out-alt"></i>
                                     </span> Logout</button>
@@ -152,81 +153,109 @@
                             <div class="tab-content" id="v-pills-tabContent">
 
                                 <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
-                                    aria-labelledby="v-pills-home-tab">   
-         <div class="fp_dashboard_body">
-            <h3 style="justify-content: center;">User list</h3>
-                <div class="fp_dashboard_order">
-                    <div class="table-responsive">
-            <table class="table">
-                <tbody>
-                    <tr class="t_header">
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Mobile</th>
-                        <th>status</th>
-                        <th>Action</th>
-                    </tr>
-            <%
-                if(users.length>0){
-                   for(let i=0;i<users.length;i++){
-             %>     
-                <tr>
-                     <td>
-                        <h5><%= users[i].name%></h5>
-                    </td>
-                    <td>
-                        <h6><%= users[i].email%></h6>
-                    </td>
-                    <td>
-                    <h5><%= users[i].mobile%></h5>
-                    </td>
-                    <%if(users[i].blocked === false){%> 
-                    <td><a class="view_invoice" href="/admin/blockUser?id=<%=users[i]._id%>">Block</a></td>
-                    <td>
-                            <span class="complete">Verified</span>
-                            </td>
-                            <%}
-                            else{
-                            %>
-                            <td><a class="view_invoice" href="/admin/unBlockUser?id=<%=users[i]._id%>">Un Block</a></td>
+                                    aria-labelledby="v-pills-home-tab">
+
+    <div class="fp_dashboard_body">
+        <h3 style="justify-content: center;">Product Offer List </h3>
+        
+        <div class="fp_dashboard_order" >
+            <div class="table-responsive" style="margin-top: 50px;" >
+                <table class="table" id="productOffer">
+                    <thead>
+                        <tr class="t_header">
+                            <th>S.No</th>
+                            <th>Name</th>
+                            <th>Category</th>
+                            <th>Image</th>
+                            <th>Price</th>
+                            <th>isOfferActive</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <%
+                        if(products.length>0){
+                           for(let i=0;i<products.length;i++){
+                     %>     
+                        <tr>
                             <td>
-                            <span class="complete" style="color: red;">Blocked</span>
-                            <% } %>
-                    </td>
-                    </tr>
-            <%
-                }
-                    }
-                    else{
-                        %>
-                    <td>
-                    <h5>Users not found</h5>
-                    </td>
+                                <h5><%= i+1%></h5>
+                            </td>
+                            <td>
+                                <h5><%= products[i].productName%></h5>
+                            </td>
+                            <td>
+                            <h5><%= products[i].categoryname.name%></h5>
+                           </td> 
+                           <td>
+                            <img style="max-width: 50%; height: auto;"  src="/product-Images/<%= products[i].image[0]%>" alt="">
+                          </td>
+                          <td>
+                            <h5><%= products[i].price%></h5>
+                          </td>
+                          <%if(products[i].isOfferApplied === true) {%>
+                          <td><a class="view_invoice" href="" style="color:white; background-color: green;" >Is Active</a></td>
+                          
+                          <td><a class="view_invoice"  onclick="deactivateProductOffer('<%= products[i]._id%>')" >Deactivate</a></td>
+                           <%} else {%>
+                            <td><a class="view_invoice" href="" style=" background-color: rgb(216, 10, 10); color: white;" >Not Active</a></td>
+                            <td><a class="view_invoice" onclick="openOfferForm('<%= products[i]._id%>')">Activate</a></td>
+                            <%}%>
+                        </tr>
                     <%
                         }
-                    %>
-                                                            
-                        </tbody>
-                        </table>
-                    </div>
-                 </div>
+                            }
+                            else{
+                                %>
+                            <td>
+                            <h5>products not found</h5>
+                            </td>
+                            <%
+                                }
+                            %>
+                    
+                        
+                    </tbody>
+                </table>
             </div>
         </div>
+
     </div>
 </div>
 </div>
+</div>
+</div>
 
 </div>
 </div>
 </div>
 
+<div id="popupForm" class="popup">
+    <div class="popup-content">
+        <span class="close" onclick="closeOfferform()">&times;</span>
+        <h2>Create Product Offer</h2>
+       
+        
+            <!-- Offer form fields -->
+            <label for="productName">Product Name:</label>
+            <input type="text" id="offerProductId" name="productId" required>
+
+            <label for="discount">Discount (%):</label>
+            <input type="number" id="productDiscount" name="discount" required>
+
+            <button onclick="createOffer()" class="btn btn-primary" type="submit">Create Offer</button>
+        
+    </div>
+</div>
 </section>
+    
 
-<script>
-    document.getElementById("dashboard-tab").addEventListener("click", (event) => {
+    <script>
+       
+        document.getElementById("dashboard-tab").addEventListener("click", (event) => {
             window.location.href = "/admin/dashboard"
         })
-    document.getElementById("users-tab").addEventListener("click" , (event)=>{
+            document.getElementById("users-tab").addEventListener("click" , (event)=>{
         window.location.href = "/admin/usersList"
     })
         document.getElementById("orders-tab").addEventListener("click" , (event)=>{
@@ -249,16 +278,23 @@
         window.location.href = "/admin/salesReport"
 
     })
-</script>
+    document.getElementById("productOffer-tab").addEventListener("click" , (event)=>{
+        window.location.href = "/admin/productOffers"
 
+    })
+   
+        
+    </script>
+    <script src="/js/admin/productOffer.js"></script>
+
+<script src="https://cdn.datatables.net/v/bs5/jq-3.6.0/dt-1.13.4/sp-2.1.2/datatables.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
+
+<script>
+    $(document).ready(function() {
+    $('#productOffer').DataTable();
+});
+</script>
 
     
 </body>
-         
-                             
-                  
-
-    
-    <!--=========================
-        DASHBOARD END 
-    ==========================-->
