--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -106,9 +106,9 @@
                         </div>
                         <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
                             aria-orientation="vertical">
-                            <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill"
+                            <button class="nav-link active" id="dashbaord-tab" data-bs-toggle="pill"
                                 data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home"
-                                aria-selected="true"><span><i class="fas fa-user"></i></span> Personal Info</button>
+                                aria-selected="true"><span><i class="fas fa-user"></i></span>Dashboard</button>
 
                            <button class="nav-link"  id="users-tab" data-bs-toggle="pill"
                                 data-bs-target="#v-pills-address" type="button" role="tab"
@@ -139,6 +139,11 @@
                                                       type="button" role="tab"
                                     aria-controls="v-pills-settings" aria-selected="false"><span><i
                                             class="fas fa-user-lock"></i></span>Sales Report</button>
+
+                                            <button class="nav-link" id="productOffer-tab" data-bs-toggle="pill"
+                                                      type="button" role="tab"
+                                    aria-controls="v-pills-settings" aria-selected="false"><span><i
+                                            class="fas fa-user-lock"></i></span>Product Offers</button>
 
                             <button class="nav-link" type="button"><span> <i class="fas fa-sign-out-alt"></i>
                                 </span> Logout</button>
@@ -232,7 +237,9 @@
 
 
         <script>
-
+document.getElementById("dashboard-tab").addEventListener("click", (event) => {
+            window.location.href = "/admin/dashboard"
+        })
             document.getElementById("users-tab").addEventListener("click" , (event)=>{
         window.location.href = "/admin/usersList"
     })
@@ -254,6 +261,10 @@
     })
     document.getElementById("sales-tab").addEventListener("click" , (event)=>{
         window.location.href = "/admin/salesReport"
+
+    })
+    document.getElementById("productOffer-tab").addEventListener("click" , (event)=>{
+        window.location.href = "/admin/productOffers"
 
     })
  </script>
