--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -105,9 +105,9 @@
                     </li>
                     <li>
                         <a href="/myCart" class="cart_icon"><i class="fas fa-shopping-basket"></i> 
-                            
+                            <%if(count!= undefined){%>
                             <span><%=count%></span></a>
-                            
+                            <%}%>
                     </li>
                     <li>
                         <a href="/userDashboard"><i class="fas fa-user"></i></a>
