--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -72,9 +72,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="">about</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Latest</a>
-                    </li>
+                    
                     
                     <li class="nav-item">
                         <a class="nav-link" href="/categories">Category<i class="far fa-angle-down"></i></a>
@@ -85,9 +83,7 @@
                            
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">blog</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link" href="">contact</a>
                     </li>
@@ -106,8 +102,8 @@
                         <!-- <a class="common_btn" href="/login" >Login</a> -->
                     </li>
                     <li>
-                        <%if(count){%>
-                        <a class="common_btn" href="" >Logout</a>
+                        <%if(count!=undefined){%>
+                        <a class="common_btn" href="/logout" >Logout</a>
                         <%} else {%>
                             <a class="common_btn" href="/login" >Login</a>
                             <%}%>
@@ -294,7 +290,11 @@
                                 <span>10</span>
                             </p>
                             <a class="title" href="/SingleProduct?id=<%=products[i]._id%>"><%= products[i].productName%></a>
-                            <h5 class="price"> RS.<%= products[i].price%></h5>
+                            <%if(products[i].isOfferApplied===true){%>
+                                <h5 class="price"> RS.<%= products[i].price%><del style="color: red;"><%=products[i].oldPrice%></del></h5>
+                                <%} else{%>
+                                    <h5 class="price"> RS.<%= products[i].price%></h5>
+                                    <%}%>
                             <ul class="d-flex flex-wrap justify-content-center">
                                 <li><a href="" data-bs-toggle="modal" data-bs-target="#cartModal"><i
                                             class="fas fa-shopping-basket"></i></a></li>
@@ -307,25 +307,7 @@
                <%}%>
                  
             </div>
-            <div class="fp__pagination mt_35">
-                <div class="row">
-                    <div class="col-12">
-                        <nav aria-label="...">
-                            <ul class="pagination">
-                                <li class="page-item">
-                                    <a class="page-link" href="#"><i class="fas fa-long-arrow-alt-left"></i></a>
-                                </li>
-                                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item active"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item">
-                                    <a class="page-link" href="#"><i class="fas fa-long-arrow-alt-right"></i></a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </section>
 
