--- a/views/users/wishlist.ejs
+++ b/views/users/wishlist.ejs
@@ -38,7 +38,7 @@
                                                         <td><a onclick="addToCart('<%=product._id%>')">Addtocart</a></td>
 
                                                         
-                                                        <td><a href="">Remove</a></td>
+                                                        <td><a onclick="removeWishlist('<%=product._id%>')">Remove</a></td>
                                                     </tr>
                                                  <%})%>
 
@@ -73,9 +73,40 @@
         })
         .catch((error)=>console.log(error))
     }
+
+    const removeWishlist =(productId)=>{
+        Swal.fire({
+      title:'Are you sure you want Cancel the Order?',
+      icon:'warning',
+      showCancelButton:true,
+      confirmButtonColor:'#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Yes!',      
+    })
+    .then((result)=>{
+        if(result.isConfirmed){
+            fetch("/removeFromWishlist", {
+                method:'post',
+                headers:{
+                    'Content-Type':'application/json'
+                },
+               body:JSON.stringify({
+                productId
+               })
+            })
+            .then((res)=>res.json())
+            .then((res)=>{
+                if(res==="success"){
+                    window.location.reload()
+                }
+            })
+            .catch((error)=>console.log(error))
+        }
+    })
+    }
 </script>
 
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
 
 
 
