--- a/views/users/forgetPassword.ejs
+++ b/views/users/forgetPassword.ejs
@@ -1,8 +1,94 @@
-<%- include("../layouts/header.ejs") %>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densityDpi=device-dpi" />
+    <title>eDiGi</title>
+    <link rel="icon" type="image/png" href="images/logo.jpeg">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/spacing.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/nice-select.css">
+    <link rel="stylesheet" href="css/venobox.min.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/jquery.exzoom.css">
+
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <!-- <link rel="stylesheet" href="css/rtl.css"> -->
+</head>
+
+<body>
+
+     <!--=============================
+        TOPBAR START
+    ==============================-->
+    <section class="fp__topbar">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-6 col-md-8">
+                    <ul class="fp__topbar_info d-flex flex-wrap">
+                        <li><a href="mailto:example@gmail.com"><i class="fas fa-envelope"></i> edigi@gmail.com</a>
+                        </li>
+                        <li><a href="callto:123456789"><i class="fas fa-phone-alt"></i> +(91) 555‑0132</a></li>
+                    </ul>
+                </div>
+                <div class="col-xl-6 col-md-4 d-none d-md-block">
+                    <ul class="topbar_icon d-flex flex-wrap">
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a> </li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a> </li>
+                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a> </li>
+                        
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--=============================
+        TOPBAR END
+    ==============================-->
+
+
+    <!--=============================
+        Nav bar START
+    ==============================-->
+    <nav class="navbar navbar-expand-lg main_menu">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <img src="images/logo.jpeg" alt="edigi logo" class="img-fluid">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="far fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav m-auto">
+                    
+                    
+                   
+                    
+                    <li class="nav-item">
+                        
+                    </li>
+                </ul>
+                <ul class="menu_icon d-flex flex-wrap">
+                    
+                    <li>
+                        <!-- <a class="common_btn" href="/login" >Login</a> -->
+                    </li>
+                   
+                </ul>
+            </div>
+        </div>
+    </nav>
 
  <!--=========================
         FORGOT PASSWORD START 
     ==========================-->
+    <br><br>
     <section class="fp__signin" >
         <div class="fp__signin_overlay pt_125 xs_pt_95 pb_100 xs_pb_70">
             <div class="container">
@@ -16,7 +102,7 @@
                                     <div class="col-xl-12">
                                         <div class="fp__login_imput">
                                             <label>email</label>
-                                            <input type="email" placeholder="Email" name="email" required>
+                                            <input type="email" placeholder="Enter your Email" name="email" required>
                                         </div>
                                     </div>
                                     <div class="col-xl-12">
@@ -30,8 +116,8 @@
                                 <p style="color: rgb(224, 15, 15);"><%=message%></p>
                               <% } %>
                             <p class="create_account d-flex justify-content-between">
-                                <a href="sign_in.html">login</a>
-                                <a href="sign_up.html">Create Account</a>
+                                <a href="/login">login</a>
+                                <a href="/register">Create Account</a>
                             </p>
                         </div>
                     </div>
