--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -69,9 +69,7 @@
                     <li class="nav-item">
                         <a class="nav-link " href="">Home </a>    
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">about</a>
-                    </li>
+                    
                     
                     
                     <li class="nav-item">
@@ -85,7 +83,7 @@
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="">contact</a>
+                        <a class="nav-link" href="/contactUs">contact</a>
                     </li>
                 </ul>
                 <ul class="menu_icon d-flex flex-wrap">
